--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "cordova-plugin-audiofocus",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Cordova Audio Focus Plugin",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Bustanity/cordova-plugin-audiofocus.git"
+    "url": "git+https://github.com/Maigre/cordova-plugin-audiofocus"
   },
-  "author": "Teemu Pynnonen <bustanity@gmail.com>",
+  "author": "Teemu Pynnonen <bustanity@gmail.com>, Maigre <thomas@37m.gr>",
   "license": "apache",
   "bugs": {
-    "url": "https://github.com/Bustanity/cordova-plugin-audiofocus/issues"
+    "url": "https://github.com/Maigre/cordova-plugin-audiofocus/issues"
   },
-  "homepage": "https://github.com/Bustanity/cordova-plugin-audiofocus#readme"
+  "homepage": "https://github.com/Maigre/cordova-plugin-audiofocus#readme"
 }
